@@ -1,3 +1,13 @@
+2007-12-19  John W. Eaton  <jwe@octave.org>
+
+	* miscellaneous/edit.m: New function.
+	* miscellaneous/Makefile.in (SOURCES): Add it to the list.
+
+2007-12-19  Michael Goffioul <michael.goffioul@gmail.com>
+
+	* plot/__bar__.m: Handle "basevalue" option.
+	* plot/__bars__.m: New arg, base_value.
+
 2007-12-17  David Bateman  <dbateman@free.fr>
 
 	* plot/rose.m, plot/feather.m, plot/compass.m: New functions
